--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
   
 
 
+
 <script>
   const form = document.getElementById('formularioVocacional');
   const steps = document.querySelectorAll('.step');
@@ -362,16 +363,20 @@
     }
 
     const blob = new Blob([markdown], { type: 'text/markdown' });
-    const url = URL.createObjectURL(blob);
+    const url = window.URL.createObjectURL(blob);
 
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = filename;
-    a.style.display = "none";
-    document.body.appendChild(a);
-    a.click();
-    document.body.removeChild(a);
-    URL.revokeObjectURL(url);
+    const link = document.createElement('a');
+    link.style.display = 'none';
+    link.href = url;
+    link.download = filename;
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+
+    setTimeout(() => {
+      window.URL.revokeObjectURL(url);
+      alert("✅ Archivo descargado correctamente. ¡Gracias por completar el formulario!");
+    }, 100);
   });
 
   loadAnswers();
