--- a/index.html
+++ b/index.html
@@ -6,77 +6,129 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cuestionario Vocacional</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #0A0A0A;
+      background-color: #0E0E10;
       color: #FFFFFF;
       margin: 0;
       padding: 0;
     }
+
     .container {
       max-width: 700px;
-      background: #1A1A1A;
-      margin: 30px auto;
-      padding: 40px;
+      background: #1A1A1D;
+      margin: 40px auto;
+      padding: 2rem 1.5rem;
       border-radius: 12px;
       box-shadow: 0 0 20px rgba(255,255,255,0.05);
     }
-    h1, h2, h3 {
-      color: #FFFFFF;
+
+    h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
     }
+
+    h2 {
+      font-size: 1.5rem;
+      font-weight: 600;
+      margin: 1.5rem 0 1rem;
+    }
+
     label {
       display: block;
       margin-top: 20px;
       font-weight: 600;
     }
+
     .example {
       font-style: italic;
-      color: #AAAAAA;
+      color: #BBBBBB;
+      margin-top: 8px;
       margin-bottom: 10px;
+      background: #2A2A2D;
+      padding: 12px;
+      border-left: 4px solid #4ECDC4;
+      border-radius: 4px;
     }
+
     textarea, input[type="text"], input[type="range"] {
       width: 100%;
       padding: 12px;
       margin-top: 6px;
-      background-color: #2A2A2A;
+      background-color: #2A2A2D;
       color: #FFFFFF;
       border: 1px solid #444;
       border-radius: 8px;
       box-sizing: border-box;
+      font-size: 1rem;
     }
+
+    textarea:focus, input:focus {
+      outline: none;
+      border-color: #4ECDC4;
+      box-shadow: 0 0 0 2px rgba(78, 205, 196, 0.3);
+    }
+
     .step {
       display: none;
     }
+
     .step.active {
       display: block;
     }
-    .buttons {
-  flex-direction: column;
-  gap: 10px;
-  align-items: stretch;
 
-      margin-top: 30px;
+    .buttons {
+      margin-top: 2rem;
       display: flex;
-  flex-wrap: wrap;
-      justify-content: space-between;
+      flex-direction: column;
+      gap: 12px;
     }
+
     button {
-      padding: 14px 16px;
-  width: 100%;
-  font-size: 18px;
-      background: #FF6B6B;
+      padding: 14px;
+      background: #4ECDC4;
       color: white;
       border: none;
       border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
+      font-size: 1rem;
       font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s ease;
+      width: 100%;
+      min-height: 48px;
     }
+
     button:hover {
-      background: #E25555;
+      background: #39beb5;
+    }
+
+    button:focus {
+      outline: 2px solid #4ECDC4;
+      outline-offset: 2px;
+    }
+
+    p {
+      color: #CCCCCC;
+      line-height: 1.6;
+    }
+
+    @media (min-width: 600px) {
+      .buttons {
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      button {
+        width: auto;
+      }
     }
   </style>
+
 </head>
 <body>
   <div class="container">
